--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -2,6 +2,7 @@
   <h2>{{title}}</h2>
   <p>{{content}}</p>
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  {{!-- TURN THIS INTO A DELETE BUTTON --}}
   <p>
     <button class="btn btn-primary">Fund this Project!</button>
   </p>
