--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,11 +10,11 @@
 
     <form class="form new-blog-form">
       <div class="form-group">
-        <label for="blog-title">blog title:</label>
+        <label for="blog-title">Blog title:</label>
         <input class="form-input" type="text" id="blog-title" name="blog-title" />
       </div>
       <div class="form-group">
-        <label for="blog-content">content:</label>
+        <label for="blog-content">Content:</label>
         <textarea class="form-input" id="blog-content" name="blog-content"></textarea>
       </div>
       <div class="form-group">
