--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,38 +1,37 @@
-<div class="row">
-  <div class="col-md-6">
+<div class='row'>
+  <div class='col-md-6'>
     <h2>Login</h2>
 
-    <form class="form login-form">
-      <div class="form-group">
-        <label for="user-login">User name:</label>
-        <input class="form-input" type="text" id="user-login"/>
+    <form class='form login-form'>
+      <div class='form-group'>
+        <label for='user-login'>User name:</label>
+        <input class='form-input' type='text' id='user-login' />
       </div>
-      <div class="form-group">
-        <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login"/>
+      <div class='form-group'>
+        <label for='password-login'>Password:</label>
+        <input class='form-input' type='password' id='password-login' />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Login</button>
+      <div class='form-group'>
+        <button class='btn btn-primary' type='submit'>Login</button>
       </div>
     </form>
   </div>
-  <div class="col-md-6">
+  <div class='col-md-6'>
     <h2>Sign up</h2>
-
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="name-signup">Name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+    <form class='form signup-form'>
+      <div class='form-group'>
+        <label for='name-signup'>Name:</label>
+        <input class='form-input' type='text' id='name-signup' />
       </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+      <div class='form-group'>
+        <label for='password-signup'>Password:</label>
+        <input class='form-input' type='password' id='password-signup' />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">Sign up</button>
+      <div class='form-group'>
+        <button class='btn btn-primary' type='submit'>Sign up</button>
       </div>
     </form>
   </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src='./js/login.js'></script>
